@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.9975-6
-Date: 2006-11-07
+Version: 0.9975-7
+Date: 2006-12-07
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
