@@ -174,6 +174,19 @@ cholmod_factor attribute_hidden
     return fun(A, Common);
 }
 
+cholmod_factor attribute_hidden
+*M_cholmod_analyze_p(cholmod_sparse *A, int *Perm, int *fset,
+		     size_t fsize, cholmod_common *Common)
+{
+    static cholmod_factor*(*fun)(cholmod_sparse*,int*,int*,size_t,
+				 cholmod_common*) = NULL;
+    if (fun == NULL)
+	fun = (cholmod_factor*(*)(cholmod_sparse*,int*,int*,
+				  size_t,cholmod_common*))
+	    R_GetCCallable("Matrix", "cholmod_analyze_p");
+    return fun(A, Perm, fset, fsize, Common);
+}
+
 cholmod_sparse attribute_hidden
 *M_cholmod_copy(cholmod_sparse *A, int stype,
 			       int mode, cholmod_common *Common)
@@ -224,6 +237,16 @@ cholmod_sparse attribute_hidden
 	fun = (cholmod_sparse*(*)(cholmod_factor*,cholmod_common*))
 	    R_GetCCallable("Matrix", "cholmod_factor_to_sparse");
     return fun(L, Common);
+}
+
+cholmod_sparse attribute_hidden
+*M_cholmod_dense_to_sparse(cholmod_dense *X, int values, cholmod_common *Common)
+{
+    static cholmod_sparse*(*fun)(cholmod_dense*,int,cholmod_common*) = NULL;
+    if (fun == NULL)
+	fun = (cholmod_sparse*(*)(cholmod_dense*,int,cholmod_common*))
+	    R_GetCCallable("Matrix", "cholmod_dense_to_sparse");
+    return fun(X, values, Common);
 }
 
 int attribute_hidden
