@@ -1,3 +1,8 @@
+2006-12-08  Douglas Bates  <bates@stat.wisc.edu>
+
+	* DESCRIPTION (Version): updated -> release 0.9975-7
+	* src/{init.c,chm_common.c}, inst/include/*: export cholmod_analyze_p
+
 2006-11-30  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/diagMatrix.R (%*%): write a direct [diag o Csparse] method
